--- a/cases/2025/05-11-黄杨钿甜天价耳环事件.md
+++ b/cases/2025/05-11-黄杨钿甜天价耳环事件.md
@@ -35,7 +35,7 @@
    ## 👥 主要涉及人员/机构 (注意隐私保护)
 
    * **受影响方**:
-        * **直接受影响者**: 黄杨钿甜 (个人声誉、公众形象受到较大负面影响)
+        * **直接受影响者**: 黄杨钿甜
    * **关联方/责任认定方**:
         * **被指控方/调查对象**: 杨伟 (黄杨钿甜父亲，信息已做匿名化处理)；深圳市水瓷慕美妆贸易有限公司；深圳市国影影视文化传播有限公司。
         * **最终认定责任方 (如有)**: 杨伟 (目前正被雅安市监察机关立案调查，最终认定结果待官方公布)。
