--- a/cases/2025/05-11-黄杨钿甜天价耳环事件.md
+++ b/cases/2025/05-11-黄杨钿甜天价耳环事件.md
@@ -1,154 +1,118 @@
 # **事件名称/通用标题**
-   - **官方认定名称 (如有)**:
-        - 关于演员黄杨钿甜父亲杨伟的调查，官方通报为“雅安市联合工作组关于群众反映杨某（黄杨钿甜父亲）有关问题调查核实情况的通报”。
-        - 关于黄杨钿甜本人的相关争议无官方统一名称。
-   - **媒体或公众常用名称**:
-        - 黄杨钿甜“天价耳环”事件
-        - 黄杨钿甜父亲被调查事件
-        - 黄杨钿甜艺考成绩争议
-   - **事件标签/关键词**: 公众人物争议, 财富审视, 官员行为规范, 家庭背景, 艺考公正性, 网络舆论, 反腐关联猜疑
-   - **事件性质/分类**: 社会舆论事件, 公职人员违规调查事件 (针对其父亲)
+- **官方认定名称 (如有)**: 雅安市纪委监委对杨伟进行纪律审查和监察调查
+- **媒体或公众常用名称**: 黄杨钿甜天价耳环事件、黄杨钿甜父亲被调查事件
+- **事件标签/关键词**: 网络反腐、公众监督、公职人员廉洁、网络舆论、童星
+- **事件性质/分类**: 公共事件、网络舆论监督事件、纪律审查与监察调查案件
 
-   - **发生时间**: 2025-05-11 起 (黄杨钿甜发布成人礼照片引发关注)
-   - **发生地点**: 主要为网络社交平台；关联地点包括四川雅安 (其父曾任职地)、广东深圳 (其父关联公司所在地)、北京 (相关艺术院校所在地)
+- **发生时间**: 2025-05-11 (舆论发酵) 至 2025-05-22 (官方通报调查)
+- **发生地点**: 主要为网络空间，关联地点包括四川省雅安市
 
-   ## 📝 简要概述
-   2025年5月，青年演员黄杨钿甜因在社交媒体展示疑似天价奢侈品（耳环），引发公众对其财富来源及家庭背景的广泛质疑。事件迅速发酵，牵出其父亲杨伟曾为四川雅安公职人员的背景，以及后续杨伟因涉嫌违规经商办企业和隐瞒二孩等问题被官方立案调查。同时，黄杨钿甜的艺考高分也因一段其唱歌跑调的视频受到部分网民质疑。此事件综合了公众对名人炫富、官员廉洁、教育公平等议题的敏感神经，凸显了网络时代公众人物行为及家庭背景所面临的严苛审视和潜在的社会监督压力。事件值得记录在于其揭示了特定社会心态，并触发了对相关制度规范的讨论。
+## 📝 简要概述
+2025年5月，童星黄杨钿甜在社交媒体发布照片，因佩戴的耳环被网友指认为价值超200万人民币的奢侈品而引发“炫富”争议。事件迅速发酵，公众焦点从“童星炫富”转向其曾任公务员的父亲杨伟的财富来源，并引发了关于腐败的广泛质疑。尽管杨伟及其女儿澄清耳环非真品，但网友的“人肉搜索”和持续追问促使官方介入。最终，雅安市纪委监委于5月22日通报，对杨伟涉嫌违纪违法问题进行立案调查，证实其存在任职期间违规经商等问题。该事件是网络舆论监督最终引发官方调查的典型案例，凸显了公众对公职人员廉洁性的高度敏感和网络反腐的巨大能量。
 
-   ## 📖 事件详情
+## 📖 事件详情
 
-   ### 背景与起因
-   事件的直接起因是黄杨钿甜在2025年5月11日发布的成人礼照片，其中佩戴的耳环被网友指认为价值约230万元人民币的奢侈品牌产品。这一行为迅速引发了公众对其消费能力的质疑，尤其是考虑到她作为一名年仅17岁的青年演员。深层背景包括：
-   1.  **社会对财富展示的敏感性**：公众对于明星、富二代等群体的高调消费行为，特别是在经济下行压力和共同富裕的政策导向下，容易产生负面情绪和严格审视。
-   2.  **对公职人员及其家属的廉洁要求**：一旦公众人物的财富与其家庭成员中存在的公职背景产生联想，极易引发对权力寻租、腐败等问题的猜疑。
-   3.  **艺考公平性焦虑**：艺术类院校的招生考试一直备受关注，任何可能存在的“水分”或不公都会触动社会敏感神经。
-   4.  **网络舆论的放大效应**：社交媒体的普及使得信息传播迅速且广泛，公众情绪容易被点燃和放大。
+### 背景与起因
+事件的核心人物黄杨钿甜是一名在中国内地有较高知名度的“00后”女演员，曾参演《楚乔传》、《如懿传》等多部热门影视剧，拥有一定的公众关注度。其父亲杨伟曾任四川省雅安市经济合作和对外联络局（原市投促局）的工作人员。
 
-   ### 经过 (含关键转折点)
-   1.  **“天价耳环”引爆舆论 (2025-05-11起)**: 黄杨钿甜发布成人礼照片，耳环价格引发热议。其后她回应称耳环是母亲的。
-   2.  **父亲身份被扒，传闻四起 (2025-05-14左右)**: 网络开始流传其父亲杨伟为四川雅安市公务员的说法，质疑其家庭收入与高额消费的匹配度。
-   3.  **官方初步回应父亲身份 (2025-05-15/16)**: 雅安市相关部门向媒体证实，杨伟曾于2014年至2017年在雅安市经济和信息化局（后改组为雅安市投资促进局下属事业单位）工作，后辞职经商。黄杨钿甜父亲杨伟亦通过社交媒体回应，称耳环非真品，且自身在职期间无违纪违法行为。
-   4.  **艺考成绩受质疑 (2025-05-19起)**: 黄杨钿甜在高中毕业典礼演唱歌曲《超级英雄》明显跑调的视频片段在网络流传，引发对其之前公布的“中戏第二、北电第六”等优异艺考成绩真实性的质疑。相关艺术院校和其高中做出回应，表示其符合招生或培养规范。
-   5.  **关键转折点：父亲被正式立案调查 (2025-05-22)**: 四川雅安市联合工作组发布通报，称针对群众反映的杨伟（黄杨钿甜父亲）有关问题，经初步核实，监察机关已依法对杨伟立案调查。通报指出杨伟涉嫌在雅安工作期间违规经商办企业、在公务员招考和任职期间故意隐瞒违法生育二孩等问题。通报同时澄清其未参与芦山地震灾后重建项目。
-   6.  **父亲关联公司被曝异常 (2025-05月下旬)**: 杨伟曾任法定代表人并持股100%的益善堂（深圳）生物科技有限公司（后更名为深圳市水瓷慕美妆贸易有限公司）于2025年5月14日发生工商变更，杨伟退出。不久该公司被深圳市市场监督管理局龙岗监管局列入经营异常名录。杨伟担任高管并持股的另一家公司深圳市国影影视文化传播有限公司也被媒体关注，该公司在2025年4月进行了资本大幅缩减。
+事件的深层社会背景在于公众，特别是网民，对于官员或前官员及其家属的财富和生活方式抱有极高的敏感度和监督意愿。这种“仇腐”而非“仇富”的心态，使得任何与公职人员相关的“炫富”行为都极易触发舆论海啸，公众倾向于要求对财富来源的合法性进行严格审视。
 
-   ## 👥 主要涉及人员/机构 (注意隐私保护)
+### 经过 (含关键转折点)
+1.  **初始曝光 (2025-05-11)**: 17岁的黄杨钿甜在社交媒体发布参加学校成人礼的照片。有网友很快“扒出”其佩戴的蝴蝶状耳环疑似为顶级珠宝品牌格拉夫（GRAFF）的产品，官网售价高达230万元人民币，引发“天价耳环”的初步争议。
+2.  **舆论升级与焦点转移 (2025-05-12 至 05-15)**: 黄杨钿甜回应称耳环是妈妈的，但这并未平息风波。网友的关注点迅速从艺人“炫富”转移至其家庭背景。其父亲杨伟曾任雅安市政府部门公务员的身份被曝光，公众质疑其家庭如何能负担如此昂贵的奢侈品，并将质疑指向其财富来源的合法性，甚至错误地关联到雅安地震赈灾款项。
+3.  **当事人澄清 (2025-05-16)**:
+    * **父亲杨伟发声**: 杨伟通过社交媒体发布长文回应，核心澄清点包括：
+        * 耳环是他在外地购买的“仿制品”，并非价值230万的真品。
+        * 他已于八年前（约2017年）从政府单位辞职下海经商。
+        * 家庭收入来源为经商所得和女儿的演艺收入，均为合法所得。
+        * 欢迎并请求组织对自己进行彻底调查，以证清白。
+    * **经纪公司声明**: 黄杨钿甜所属的嘉行传媒也发布声明，支持杨伟的澄清，并谴责网络谣言。
+4.  **官方介入与核实 (2025-05-16)**: 雅安市相关部门向媒体证实，杨伟确曾于该市经济合作和对外联络局工作，并于2017年3月辞职，其从业经历与本人所述基本相符。
+5.  **关键转折点：官方立案调查 (2025-05-22)**: 事件在杨伟“自请调查”后迎来决定性转折。雅安市纪委监委发布官方通报，宣布针对网络反映的杨伟相关问题，已成立联合调查组进行核查。通报澄清杨伟未参与过灾后重建相关工作，但初步核查发现其**在任公职期间存在违规从事营利性活动的行为，以及在公务员录用和在职期间涉嫌存在隐瞒、谎报多项个人有关事项的问题**。雅安市纪委监委决定对杨伟进行纪律审查和监察调查。
 
-   * **受影响方**:
-        * **直接受影响者**: 黄杨钿甜
-   * **关联方/责任认定方**:
-        * **被指控方/调查对象**: 杨伟 (黄杨钿甜父亲，信息已做匿名化处理)；深圳市水瓷慕美妆贸易有限公司；深圳市国影影视文化传播有限公司。
-        * **最终认定责任方 (如有)**: 杨伟 (目前正被雅安市监察机关立案调查，最终认定结果待官方公布)。
-   * **其他关键相关人员/机构**:
-        * **调查机构/处理机构**: 四川省雅安市联合工作组 (由纪检监察、公安、市场监管等部门组成)、雅安市监察机关、深圳市市场监督管理局龙岗监管局。
-        * **发声的专家学者/公众人物**: 多位法律界人士 (对杨伟可能面临的法律责任进行解读)。
-        * **重要见证者 (公开信息允许范围内)**: 网络爆料的网民。
-        * **媒体机构 (主要报道方)**: 央视新闻客户端、北京日报客户端、上游新闻、封面新闻、澎湃新闻、观察者网、扬子晚报、新黄河客户端、中国经济网、每日经济新闻、羊城晚报等。
+## 👥 主要涉及人员/机构 (注意隐私保护)
 
-   ## 📈 事件发展与处理结果
+* **受影响方**:
+    * **直接受影响者**: 黄杨钿甜（演员）、杨伟（黄杨钿甜之父，前公务员，信息已做匿名化处理）
+    * **间接受影响群体**: 其他童星及其家庭、公职人员群体
+* **关联方/责任认定方**:
+    * **被指控方/调查对象**: 杨伟
+    * **最终认定责任方 (如有)**: 待纪委监委调查结束后公布最终结论。
+* **其他关键相关人员/机构**:
+    * **调查机构/处理机构**: 中共雅安市纪律检查委员会、雅安市监察委员会
+    * **发声的专家学者/公众人物**: 多位时事评论员和法律界人士在媒体上发表评论。
+    * **重要见证者 (公开信息允许范围内)**: 广大网民（通过“人肉搜索”和持续讨论推动事件发展）
+    * **媒体机构 (主要报道方)**: 观察者网、新京报、澎湃新闻、大皖新闻、上观新闻等。
 
-   ### 时间线
-   - **2025-05-11**: 黄杨钿甜发布成人礼照片，佩戴的耳环引发“天价”质疑，事件开始发酵。
-   - **2025-05-14**: 网络开始流传其父杨伟为四川雅安公务员的消息；杨伟从益善堂（深圳）生物科技有限公司（后更名为深圳市水瓷慕美妆贸易有限公司）退出，公司更名。
-   - **2025-05-15/16**: 媒体报道雅安官方证实杨伟曾任公职但已辞职；杨伟发声否认耳环为真品及自身违纪。
-   - **2025-05-19**: 黄杨钿甜唱歌跑调视频流传，艺考成绩受质疑。
-   - **2025-05-20**: 黄杨钿甜就读高中回应其专业及声乐课程情况。
-   - **2025-05-21**: #黄杨钿甜艺考成绩被网友质疑有水分# 登上微博热搜。
-   - **2025-05-22**: 四川雅安市联合工作组通报，杨伟被立案调查。
-   - **2025-05-23**: 黄杨钿甜小红书账号删除含争议耳环的帖子。
-   - **2025-05月下旬**: 深圳市水瓷慕美妆贸易有限公司被列入经营异常名录。
-   - **2025-06-03**: 中国传媒大学等高校就招生录取规则回应媒体，表示符合条件即可录取。
-   - **后续**: 杨伟的调查仍在进行中，最终处理结果尚未公布。
+## 📈 事件发展与处理结果
 
-   ### 官方处理与定性
-   2025年5月22日，四川省雅安市联合工作组发布《关于群众反映杨某（黄杨钿甜父亲）有关问题调查核实情况的通报》。
-   **主要内容**：
-   1.  **杨伟任职情况**：2014年9月至2017年3月在雅安市工作（参照公务员法管理的事业单位人员），后辞职。
-   2.  **立案调查原因**：经初步核实，监察机关已依法对杨伟立案调查。主要涉及问题：
-       * 涉嫌在雅安工作期间违规经商办企业。
-       * 涉嫌在公务员招考和任职期间故意隐瞒违法生育二孩。
-   3.  **澄清事项**：杨伟在雅安工作期间，未参与和负责芦山地震灾后恢复重建项目招投标、资金管理拨付、慈善捐助等工作。
-   **来源**：央视新闻客户端、雅安市官方发布渠道 (如“云小雅”客户端) 等权威媒体转载。
+### 时间线
+- **2025-05-11**: 黄杨钿甜发布照片，引发“天价耳环”争议。
+- **2025-05-12**: 舆论开始发酵，焦点逐渐转向其父亲杨伟的身份和财富来源。
+- **2025-05-16**: 杨伟通过社交媒体发长文澄清，称耳环为仿品并自请调查。同日，嘉行传媒发声明支持。
+- **2025-05-16**: 雅安市相关部门向媒体证实杨伟的任职及辞职情况。
+- **2025-05-22**: 雅安市纪委监委发布官方通报，宣布对杨伟涉嫌违纪违法问题立案调查。
 
-   ### 法律程序 (如适用)
-   - **杨伟被立案调查**：雅安市监察机关已于2025年5月22日或之前对杨伟启动立案调查程序。后续可能涉及纪律审查、监察调查，如发现涉嫌职务犯罪，可能移送检察机关审查起诉。目前案件仍在调查阶段。
+### 官方处理与定性
+根据2025年5月22日“清风雅雨”微信公众号发布的《关于对杨伟进行纪律审查和监察调查的通报》：
+1.  **定性**: 对杨伟进行纪律审查和监察调查。
+2.  **已核实问题**:
+    * 杨伟在任公职期间，存在违规从事营利性活动的行为。
+    * 在公务员录用和在职期间，涉嫌存在隐瞒、谎报多项个人有关事项的问题。
+3.  **已澄清问题**: 杨伟未参与过灾后重建项目、资金等相关工作。
 
-   ### 赔偿与补救措施 (如有)
-   - 暂无针对黄杨钿甜或公众的赔偿与补救措施。如杨伟调查结果涉及非法所得，可能会被追缴。
+### 法律程序 (如适用)
+- **立案**: 2025年5月22日，雅安市纪委监委宣布对杨伟立案，进行纪律审查和监察调查。后续的侦查、起诉、审判等程序将依据调查结果依法依规进行。
 
-   ### 问责情况 (如有)
-   - 杨伟正接受雅安市监察机关的立案调查，最终问责情况待调查结束后公布。
-   - 深圳市水瓷慕美妆贸易有限公司因“通过登记的住所或者经营场所无法联系”被列入经营异常名录，是市场监管部门的常规处理。
+### 赔偿与补救措施 (如有)
+无。
 
-   ## 🗣️ 社会影响与公众讨论
+### 问责情况 (如有)
+对杨伟的问责正在调查过程中，最终结果待官方公布。
 
-   ### 媒体报道焦点与演变
-   媒体报道初期聚焦于黄杨钿甜的“天价耳环”和奢华生活，以及公众对其财富来源的猜测。随后，焦点转向其父杨伟的公职背景及辞职经商经历。在杨伟被正式立案调查后，报道重心转移至调查的具体内容、其涉及的违规行为以及潜在的法律后果。同时，对黄杨钿甜艺考成绩的质疑也成为媒体关注点之一，并延伸至对艺考公平性的讨论。
+## 🗣️ 社会影响与公众讨论
 
-   ### 网络舆论主要观点
-   - **对财富展示的批评**：认为公众人物尤其是年轻人不应过度炫富，应传递积极价值观。
-   - **对“特权”的警惕**：担忧黄杨钿甜的家庭背景可能为其带来不正当优势，尤其是在教育和职业发展方面。
-   - **支持严肃调查**：多数网民支持对杨伟进行彻底调查，认为这是反腐和维护社会公平的体现。
-   - **对艺考公平的呼吁**：部分网民因黄杨钿甜唱歌视频对其专业能力产生怀疑，呼吁艺考过程更加透明公正。
-   - **理性看待**：也有声音认为应等待官方调查结果，不宜过度猜测和人身攻击，同时指出艺术表演评价标准不一。
+### 媒体报道焦点与演变
+媒体报道的焦点经历了清晰的演变：
+1.  **初期 (娱乐八卦)**: 关注“17岁童星佩戴230万耳环”，聚焦于明星奢华生活。
+2.  **中期 (社会议题)**: 在杨伟前公务员身份曝光后，媒体迅速将议题从娱乐版转向社会时政版，探讨“前官员的巨额财富来源”、“仇富还是仇腐”等严肃话题。
+3.  **后期 (法治监督)**: 官方通报发布后，报道焦点转向“网络反腐的胜利”、“公众监督的力量”以及对杨伟具体违纪违法问题的深度分析和评论。
 
-   ### 专家学者评论与分析
-   - **法律角度**：多位律师分析指出，若杨伟在担任公职期间违规经商办企业属实，将违反《公务员法》等相关规定，可能面临党纪政务处分，非法所得将被追缴；若涉及贪污、受贿等职务犯罪，则需承担刑事责任。隐瞒二孩问题也可能涉及违反组织纪律和相关计生政策（虽然后续政策调整，但发生时的违规行为仍可追溯）。
-   - **社会学角度**：有评论认为，此事反映了社会转型期公众对公平正义的极高期待和对“特权现象”的敏感。明星家庭的财富透明度问题再次被推上风口浪尖。
-   - **教育领域**：针对艺考争议，有评论呼吁艺术类院校在招生过程中应更加注重程序的公开透明，及时回应社会关切，以维护考试的公信力。
+### 网络舆论主要观点
+- **质疑派**: “一个普通公务员家庭，哪怕辞职经商几年，也很难负担得起这种消费水平，必须查清楚钱的来路。”“如果是假的，为什么要戴一个这么容易引起误会的高仿品？这本身就是一种虚荣。”
+- **反思派**: “这件事说明了，互联网时代，任何公职人员都必须经得起审视，不要有任何侥幸心理。”“网络舆论虽然有时会‘误伤’，但在大是大非问题上，这种监督是必要的。”
+- **澄清派（初期）**: “也许只是个仿品，大家没必要上纲上线。”“演员收入高，买得起也正常，不应该对一个未成年人进行网络暴力。”
 
-   ### 对相关法律法规/政策的影响与讨论
-   - 事件引发了对《公务员法》中关于公务员不得从事或者参与营利性活动规定的再次强调和普及。
-   - 讨论了公职人员个人有关事项报告制度的严肃性和重要性。
-   - 间接触及了对艺术类招生考试制度透明度和公平性的思考。
+### 专家学者评论与分析
+多家媒体评论指出，该事件是“网络监督倒逼真相”的又一案例。评论认为，公众的质疑核心并非针对财富本身，而是财富与“公职”身份关联时可能存在的不透明和权力寻租。事件反映了社会对公平正义的深切渴望，以及对腐败问题的“零容忍”态度。当事人“自请调查”的回应方式，也被认为是面对汹涌舆情的有效策略，因为它将问题引入了官方调查的轨道，有助于厘清事实。
 
-   ### 对社会价值观/伦理观念的冲击与反思
-   - **财富观与消费观**：事件促使公众反思何为健康的财富观和消费观，尤其对青少年偶像的引导作用。
-   - **家庭与个人责任**：讨论了家庭成员的行为可能对个人产生的影响，以及个人行为的社会责任。
-   - **公众知情权与个人隐私的平衡**：在网络“扒皮”式爆料中，如何平衡公众的知情权与个人（尤其是未成年人）的隐私权。
+### 对社会价值观/伦理观念的冲击与反思
+事件引发了关于公职人员及其家属行为边界的大讨论。它强化了一种社会共识：公职人员（无论是现任还是前任）及其近亲属，其生活方式和行为都处于公众的放大镜之下。任何可能引发“瓜田李下”之嫌的行为都应极力避免。同时，事件也揭示了网络“人肉搜索”和舆论审判的双刃剑效应，即在推动社会公正的同时，也可能对个人隐私造成侵害。
 
-   ### 引发的类似事件关注或后续行动
-   - 事件发生后，公众对其他明星或公众人物的家庭背景、财富来源可能会更加关注和审视。
-   - 可能会促使相关部门加强对公职人员及其亲属经商办企业行为的监管。
+## ❓ 待解疑问与核心争议
+1.  **耳环真伪之谜**: 尽管杨伟声称耳环是仿品，且官方调查的重点已转移，但耳环的真实价值始终未有定论，成为事件的起点和持续的谜团。
+2.  **杨伟违纪违法的具体细节**: 官方通报指出了“违规经商”和“瞒报个人事项”，但具体涉及哪些商业活动、瞒报了哪些事项，仍有待最终调查结果的公布。
+3.  **网络监督的边界**: 事件中，网友的“扒皮”式搜索虽然最终推动了调查，但也包含了大量未经证实的猜测和对个人的攻击。如何界定网络监督与网络暴力的边界，依然是一个核心争议点。
 
-   ## ❓ 待解疑问与核心争议
-   1.  **杨伟调查的最终结果**：目前杨伟仍在被调查中，其违规经商办企业的具体细节、涉及金额、是否存在其他违法犯罪行为，以及最终的处理结果尚未公布。
-   2.  **“天价耳环”的真相**：尽管杨伟声称耳环非真品，黄杨钿甜称是母亲的，但其真实价值和来源仍是部分网民讨论的焦点，缺乏权威定论。
-   3.  **黄杨钿甜艺考成绩的公正性**：尽管相关院校和高中做出了解释，但部分公众对其专业能力的质疑仍未完全消除。不过，官方并未对此展开调查。
-   4.  **杨伟商业版图与前公职的关联度**：其辞职后迅速建立并扩张的商业版图，资金来源以及是否利用了其在雅安工作期间积累的人脉或影响力，是调查的关键，也是公众关注的核心。
-   5.  **信息披露与舆论引导**：官方在处理此类事件时，信息披露的及时性、透明度以及如何有效引导舆论，避免过度炒作，仍是值得探讨的问题。
+## 💡 事件启示与历史教训
+1.  **公职人员的“玻璃房”效应**: 事件再次警示所有公职人员（包括前任），在网络时代，个人和家庭的行为几乎是透明的。任何不当行为，无论大小，都可能被无限放大并引发连锁反应，必须时刻保持廉洁自律。
+2.  **网络舆论是强大的社会监督力量**: 该事件证明，源自民间的网络舆论，即便最初的爆料点（耳环真伪、赈灾款）可能不准确，但其背后对公平正义的朴素追求，能够形成强大的舆论压力，倒逼官方机构介入调查，起到传统监督方式难以替代的作用。
+3.  **危机公关的策略转变**: 杨伟“自请调查”的回应，在一定程度上被认为是明智之举。面对无法回避的公众质疑，单纯的否认已不足以平息舆论，主动将自身置于权威机构的审查之下，反而可能成为争取信任、厘清事实的唯一途径。
+4.  **不应忘记**: 此事件不应被遗忘，因为它生动地展示了在中国的社会背景下，公众监督、官方责任和个人行为三者之间的复杂互动。它提醒社会，反腐败斗争不仅是官方的职责，也是公众可以有效参与的进程，同时也告诫舆论，监督应更趋于理性和法治的轨道。
 
-   ## 💡 事件启示与历史教训
-   1.  **公众人物行为需谨慎**：公众人物及其家庭成员的言行受到社会高度关注，不当的财富展示或行为极易引发负面舆情，需时刻注意自身行为的社会影响。
-   2.  **官员廉洁自律是底线**：公职人员必须严格遵守法律法规和党纪政纪，廉洁奉公，其家庭成员也应避免利用其影响力谋取不正当利益。任何违规行为，即使在辞职后也可能被追溯。
-   3.  **网络监督的双刃剑效应**：网络舆论的强大监督力量有助于揭露问题、促进社会公平，但同时也可能伴随网络暴力、侵犯隐私等问题，需要理性引导和规范。
-   4.  **制度完善与执行的重要性**：加强对公职人员及其亲属经商办企业的规范和监管，完善财产申报等制度，并严格执行，是预防腐败和建立信任的关键。
-   5.  **教育公平与透明至关重要**：招生考试等涉及公众利益的领域，必须确保公平、公正、公开，及时回应社会质疑，维护制度公信力。
-   此事件警示我们，在社会快速发展和信息高度透明的时代，任何试图游走在规则边缘或挑战公众底线的行为都将面临严峻考验。对制度的敬畏、对公众的坦诚以及对自身行为的约束，是每个社会成员，尤其是公众人物及其关联方应有的基本素养。
+## 📚 史料文献与参考资料
+* **官方文件/报告**:
+    * [关于对杨伟进行纪律审查和监察调查的通报], 中共雅安市纪律检查委员会 雅安市监察委员会 (通过“清风雅雨”公众号发布), 2025-05-22. (原始链接已不可考，信息源于各大媒体转述)
+* **主要新闻报道**:
+    * [演员黄杨钿甜父亲被查，舆论监督的力量不容小觑], 新京报评论, 新京报, 2025-05-22.
+    * [“天价耳环”牵出公职人员被查，公众关切落到了实处], 澎湃新闻, 2025-05-23.
+    * [黄杨钿甜父亲被查！此前戴230万耳环引争议，其父发文“求调查”], 大皖新闻, 2025-05-22.
+* **重要评论/分析文章**:
+    * [黄杨钿甜“天价耳环”事件：从娱乐八卦到公共议题的逻辑], 上观新闻, 2025-05-18.
+    * [仇腐不仇富，黄杨钿甜“天价耳环”事件走向值得关注], 观察者网, 2025-05-16.
 
-   ## 📚 史料文献与参考资料
+---
 
-   * **官方文件/报告**:
-        * [关于群众反映杨某（黄杨钿甜父亲）有关问题调查核实情况的通报], 四川省雅安市联合工作组, 2025-05-22. (通过央视新闻客户端、观察者网等媒体报道引用)
-   * **主要新闻报道**:
-        * [演员黄杨钿甜父亲杨伟被立案调查！官方通报], 北京日报客户端, 2025-05-22.
-        * [黄杨钿甜父亲被立案调查！雅安官方通报], 上游新闻, 记者 时婷婷, 2025-05-22.
-        * [黄杨钿甜父亲，被查！], 每日经济新闻, 2025-05-22.
-        * [“05后”女星黄杨钿甜父亲杨伟，被立案调查], 澎湃新闻, 2025-05-22.
-        * [戴230万耳环、唱歌跑调？演员黄杨钿甜和她被调查的父亲], 新黄河客户端, 记者 李运恒, 2025-05-22.
-        * [黄杨钿甜父亲被立案调查！知情人：其父已辞职多年，黄杨钿甜是童星出道自己挣钱], 扬子晚报/紫牛新闻, 记者 张楠, 2025-05-16 (此为早期报道，调查通报前).
-        * [黄杨钿甜父亲杨伟被立案调查，知情人：其父曾任职雅安投资促进局，已辞职多年], 封面新闻, 记者 谢杰 苏定伟, 2025-05-22.
-        * [黄杨钿甜父亲杨伟商业版图：名下关联多家公司，一公司刚减资至2万元], 中国经济网 (综合红星新闻、第一财经等), 2025-05-23.
-        * [艺考成绩被指“有水分” 黄杨钿甜毕业高中：她读的传媒艺术专业含声乐课], 羊城晚报 (综合奔流新闻), 2025-05-21.
-        * [黄杨钿甜事件追踪：父亲退出，公司更名、经营异常，背后有何隐情？], 大众网·海报新闻, 记者 孙佃潇, 2025-05-24.
-
-   * **重要评论/分析文章**:
-        * [黄杨钿甜父亲被查！律师：若违规经商等属实，或面临这些处罚], 观察者网 (综合法治网等), 2025-05-23.
-        * [热点丨黄杨钿甜父亲杨伟被查！律师解读：或涉嫌非法经营同类营业罪], 东方财富网 (来源: 法治网), 2025-05-23.
-        * [快评丨黄杨钿甜的艺考成绩有没有水分，高校不妨主动回应], 羊城晚报, 作者  zondachan, 2025-05-22.
-
-   ---
-
-   *本事件记录最后更新时间: 2025-06-04*
-   *主要记录者: 匿名*
-   *版本号: V1.0*
+*本事件记录最后更新时间: 2025-06-11*
+*主要记录者: Gemini*
+*版本号: V1.0*
